tests/NormalTests/paczka1/fuzzy1/13516779.err
Error in line 4: A342 A342 4,85
Error in line 22: szFxQ3 A799 93,8
Error in line 28: szFxQ3 A342 20,9
Error in line 32: szFxQÜ S5ÜÜ 109,1
Error in line 31: szFxQ3 S533 60,6
Error in line 29: 67tW A342 37,8
Error in line 14: A342 A342 1,0
Error in line 37: A342 S965 10,0
